--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,34 @@
 <!DOCTYPE html>
 <html>
-
   <head>
-
     <link rel="stylesheet" href="{{ url_for('static',
-              filename='game.css') }}" type="text/css"/>
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-    <script src="{{ url_for('static',filename='game.js') }}" defer></script>
+            filename='game.css') }}" type="text/css"/>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',
+            filename='bootstrap.min.css') }}">
+    <script src="{{ url_for('static',
+            filename='jquery-2.2.4.min.js') }}"></script>
+    <script src="{{ url_for('static',filename='game.js') }}" ></script>
 
   </head>
 
   <body>
+
+    <div class="update">
+       <label id="high">Highest Score:</label><br>
+       <label id="yhigh">Your Highest Score:</label><br><br>
+       <label>Your name:
+           <input type="text" id="name" placeholder="Try to be creative" required/>
+       </label>
+       <br>
+       <label>Your email:
+           <input type="email" id="email" name="email" placeholder="No creativity please!" required/>
+      </label>
+      <br>
+      <button id="updateScore" class="btn btn-primary">
+           Update Score
+      </button>
+
+    </div>
 
     <div class="wrapper">
      <div class="back">
@@ -52,6 +69,8 @@
    </div>
 
  </div>
+
+
 
 </body>
 </html>
